Created a new jsp page and servlet so that others can view the profile pages of a user

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -86,5 +86,15 @@
       <url-pattern>/profile/*</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>ProfileViewServlet</servlet-name>
+    <servlet-class>codeu.controller.ProfileViewServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>ProfileViewServlet</servlet-name>
+      <url-pattern>/profileView/*</url-pattern>
+  </servlet-mapping>
+
 
 </web-app>
